Closed
Bug 265300
Opened 21 years ago
Closed 19 years ago
Check for subject in email form submission should be case-insensitive
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
People
(Reporter: TomRScott, Assigned: philor)
References
()
Details
Attachments
(2 files)
|
113 bytes,
text/html
|
Details | |
|
1.03 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.7.3) Gecko/20041001 Firefox/0.10.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.7.3) Gecko/20041001 Firefox/0.10.1
In IE, one can have the form send e-mail with a specific subject line such as
"[ISUS Web] Dealer Inquiry". However, with Firefox, the subject is replaced
with "Form Post From Mozilla".
Sample code used to designate e-mail address and subject are:
<form method="POST" enctype="text/plain"
action="mailto:Info@InventorySystemsUS.com;
Webmaster@On-SiteComputer.com?Subject=[ISUS Web] Dealer Inquiry">
form body . . .
</form>
Reproducible: Always
Steps to Reproduce:
1. Noted in detail and in sample web page referenced above.
2.
3.
Actual Results:
Noted in detail above.
Expected Results:
Perform as IE does, in this instance.
For severity, I selected Minor, however, there does not seem to be an easy work
around.
Thanks
TomRScott@On-SiteComputer.com
Also, if there is no subject specified it should say
"Form Post From Firefox" (or something even better like "E-Mail send from
www.something.com")
and not "Form Post From Mozilla"
Comment 2•21 years ago
|
||
The general part of that might be bug 207020 - I filed bug 287695 about the
issue that we have a hardcoded app name there (which soon won't even exist any
more on trunk).
| Reporter | ||
Comment 3•21 years ago
|
||
Is there any chance of this being fixed soon?
I originally posted this as a Minor bug. However, with Mozilla becoming more
popular it is a growing problem. Given how long this has taken, I changed the
severity to Normal.
- Tom
Alias: Mozilla_Form_Post
Severity: minor → normal
Summary: Subject line for form Posts replaced with "Form Post From Mozilla". → E-mail subject line for form Posts replaced with "Form Post From Mozilla".
Comment 4•21 years ago
|
||
Should be fixed with the checkin for bug 287695. Please reopen if this is not
the case.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 5•19 years ago
|
||
As one can see, I posted this bug over two years ago. I recently received an e-mail indicating that the bug report status may have changed. Indeed the report was at a status of "Resolved Fixed".
I just tested it with Firefox 2 (standard release) on a Win 2K platform. The bug has NOT been resolved or fixed.
As such, I'm reopening the bug report.
- Tom
Status: RESOLVED → UNCONFIRMED
OS: Windows 2000 → All
Resolution: FIXED → ---
| Assignee | ||
Comment 6•19 years ago
|
||
We're checking for only a lower-case "subject", not "Subject" - I'd be surprised if anything else makes that mistake, so you probably can work around it until Firefox 3 ships by using ?subject= instead.
Alias: Mozilla_Form_Post
Assignee: bross2 → form-submission
Status: UNCONFIRMED → NEW
Component: General → HTML: Form Submission
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → ian
Hardware: PC → All
Summary: E-mail subject line for form Posts replaced with "Form Post From Mozilla". → Check for subject in email form submission should be case-insensitive
Version: unspecified → Trunk
| Assignee | ||
Comment 7•19 years ago
|
||
| Assignee | ||
Comment 8•19 years ago
|
||
I guess this is the right place to break the line.
Assignee: form-submission → philringnalda
Status: NEW → ASSIGNED
Attachment #256632 -
Flags: superreview?(bzbarsky)
Attachment #256632 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 9•19 years ago
|
||
(In reply to comment #6)
> by using ?subject= instead.
Hmm, actually, at least Thunderbird and Evolution don't seem to accept a lowercase subject, only Subject. I'm not quite sure whether that's their problem, and we should be passing through subject=foo anyway, or we should be doing a case-sensitive check for Subject.
Comment 10•19 years ago
|
||
Comment on attachment 256632 [details] [diff] [review]
Fix v.1
Doing this case-insensitive is correct -- this is supposed to be an RFC822 header name, and those are case-insensitive.
As for Thunderbird, that's odd. I see it doing case-insensitive compares in the relevant code...
Attachment #256632 -
Flags: superreview?(bzbarsky)
Attachment #256632 -
Flags: superreview+
Attachment #256632 -
Flags: review?(bzbarsky)
Attachment #256632 -
Flags: review+
| Assignee | ||
Comment 11•19 years ago
|
||
content/html/content/src/nsFormSubmission.cpp 1.53
Status: ASSIGNED → RESOLVED
Closed: 21 years ago → 19 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•