Bug 265300: Check for subject in email form submission should be case-insensitive, r+sr=bz